argocd/platform/core/gateway/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.110.235
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: stalwart-https
      protocol: HTTPS
      port: 443
      hostname: stalwart.home.arpa
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: stalwart-admin-tls
      allowedRoutes:
        namespaces:
          from: All
