argocd/platform/core/gateway/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.110.236
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: hubble-https
      protocol: HTTPS
      port: 443
      hostname: hubble.home.arpa
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: hubble-tls
      allowedRoutes:
        namespaces:
          from: All
